# symbol-detection

./: .gitignore  PRODUCTION_TRAINING_GUIDE.md  README.md  TRAINING_QUICK_START.md  asset-manifest.json  index.html
.github/workflows/: deploy-frontend.yml
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  theme.js
frontend/src/components/: Navbar.js
frontend/src/pages/: AboutPage.js  DetectorPage.js
hf-space/: Dockerfile  app.py  predictor.py  requirements.txt
hf-space/model/: categories.json  model_epoch_480.pth
notebooks/: inference.ipynb  resume_training.ipynb  train_colab.ipynb
python/: .gitignore  benchmark_checkpoints.py  dataset_generator.py  main.py  pyproject.toml  regenerate_dataset.py  symbol_annotations.json  test_categories.py  visualize_annotations.py
python/dataset/: annotations.json
python/dataset_preview/: annotations.json
python/effects/: pyproject.toml
python/effects/src/effects/: __init__.py  fading.py  twirl_distortion.py  water_wave_distortion.py
python/floor-grid/: pyproject.toml
python/floor-grid/src/floor_grid/: __init__.py  building_generator.py  door_generator.py  models.py  place_non_overlapping_rect_rooms.py  room_generator.py  symbol_placer.py  visualizer.py
python/src/symbol_detection/: __init__.py  config.py
python/src/symbol_detection/dataset/: __init__.py  cli.py  generator.py  symbol_generator.py  visualizer.py
python/src/symbol_detection/inference/: README.md  __init__.py  cli.py  predictor.py
python/src/symbol_detection/training/: __init__.py  cli.py  data.py  losses.py  trainer.py
static/js/: main.124210c9.js  main.7c4b78b4.js
