[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "effects",
    "floor-grid",
    "matplotlib>=3.10.8",
    "Pillow>=11.0.0",
]

[tool.uv.workspace]
members = [
    "effects",
    "floor-grid",
]

[tool.uv.sources]
effects = { workspace = true }
floor-grid = { workspace = true }
