[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "symbol-detection"
version = "0.1.0"
description = "Electrical symbol detection in floor plans using COCO dataset"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "opencv-python>=4.8",
    "Pillow>=10.0",
    "torch>=2.0",
    "torchvision>=0.15",
    "pycocotools>=2.0",
    "timm>=0.9",
    "torchmetrics>=0.13",
    "effects",
    "floor-grid",
]

[project.scripts]
generate-dataset = "symbol_detection.dataset.cli:main"
train-model = "symbol_detection.training.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
symbol_detection = ["py.typed"]

[tool.uv.workspace]
members = [
    "floor-grid",
    "effects",
]

[tool.uv.sources]
effects = { workspace = true }
floor-grid = { workspace = true }


